# laas-tutorial

./: .gitignore  Home.py  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
docs/notebooks/: 03_🔍_Web_Search.ipynb
helpers/: laas_chat_api.py
pages/: 01_📺_Youtube_Summary.py  02_💬_Friendly_Buddy_Chatbot.py  03_🔍_Web_Search.py  04_🤖_Multi_Bot_Response.py
