[tool.poetry]
name = "laas-tutorial"
version = "0.1.0"
description = ""
authors = ["jeongsk <jeongseok@wantedlab.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain-community = "^0.2.12"
streamlit = "^1.37.1"
youtube-transcript-api = "^0.6.2"
python-dotenv = "^1.0.1"
tavily-python = "^0.4.0"
toml = "^0.10.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
